data/runtime/manual_repairs/patch_134h_apply_report_dir_creation_repair_20260330_003801/inner_reports/patch_134h_apply_report_dir_creation_repair_patch_134h_apply_report_dir_creation_repair_20260330_003802.txt
PATCHOPS APPLY
Patch Name           : patch_134h_apply_report_dir_creation_repair
Manifest Path        : C:\dev\patchops\data\runtime\manual_repairs\patch_134h_apply_report_dir_creation_repair_20260330_003801\patch_manifest.json
Workspace Root       : C:\dev
Wrapper Project Root : C:\dev\patchops
Target Project Root  : C:\dev\patchops
Active Profile       : generic_python
Runtime Path         : (none)
Backup Root          : C:\dev\patchops\data\runtime\patch_backups\patch_134h_apply_report_dir_creation_repair_20260330_003802
Report Path          : C:\dev\patchops\data\runtime\manual_repairs\patch_134h_apply_report_dir_creation_repair_20260330_003801\inner_reports\patch_134h_apply_report_dir_creation_repair_patch_134h_apply_report_dir_creation_repair_20260330_003802.txt
Manifest Version     : 1


TARGET FILES
------------
C:\dev\patchops\patchops\workflows\apply_patch.py
C:\dev\patchops\tests\test_report_preference_apply_flow_current.py
C:\dev\patchops\docs\summary_integrity_repair_stream.md
C:\dev\patchops\docs\project_status.md
C:\dev\patchops\docs\patch_ledger.md


BACKUP
------
BACKUP : C:\dev\patchops\docs\patch_ledger.md -> C:\dev\patchops\data\runtime\patch_backups\patch_134h_apply_report_dir_creation_repair_20260330_003802\docs\patch_ledger.md
BACKUP : C:\dev\patchops\docs\project_status.md -> C:\dev\patchops\data\runtime\patch_backups\patch_134h_apply_report_dir_creation_repair_20260330_003802\docs\project_status.md
BACKUP : C:\dev\patchops\docs\summary_integrity_repair_stream.md -> C:\dev\patchops\data\runtime\patch_backups\patch_134h_apply_report_dir_creation_repair_20260330_003802\docs\summary_integrity_repair_stream.md
BACKUP : C:\dev\patchops\patchops\workflows\apply_patch.py -> C:\dev\patchops\data\runtime\patch_backups\patch_134h_apply_report_dir_creation_repair_20260330_003802\patchops\workflows\apply_patch.py
MISSING: C:\dev\patchops\tests\test_report_preference_apply_flow_current.py


WRITING FILES
-------------
WROTE : C:\dev\patchops\patchops\workflows\apply_patch.py
WROTE : C:\dev\patchops\tests\test_report_preference_apply_flow_current.py
WROTE : C:\dev\patchops\docs\summary_integrity_repair_stream.md
WROTE : C:\dev\patchops\docs\project_status.md
WROTE : C:\dev\patchops\docs\patch_ledger.md


VALIDATION COMMANDS
-------------------
NAME    : patch_134h_validation
COMMAND : py validate_patch_134h.py 'C:\dev\patchops'
CWD     : C:\dev\patchops\data\runtime\manual_repairs\patch_134h_apply_report_dir_creation_repair_20260330_003801
EXIT    : 0
NAME    : report_dir_current
COMMAND : py -m pytest -q tests/test_report_preference_apply_flow.py tests/test_report_preference_apply_flow_current.py
CWD     : C:\dev\patchops
EXIT    : 2


FULL OUTPUT
-----------
[patch_134h_validation][stdout]
patch_134h validation passed

[patch_134h_validation][stderr]

[report_dir_current][stdout]

=================================== ERRORS ====================================
_____ ERROR collecting tests/test_report_preference_apply_flow_current.py _____
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kostas\AppData\Local\Programs\Python\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\dev\patchops\tests\test_report_preference_apply_flow_current.py", line 53
E       str(target_root).replace("\", "/"),
E                                       ^
E   SyntaxError: unterminated string literal (detected at line 53)
=========================== short test summary info ===========================
ERROR tests/test_report_preference_apply_flow_current.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!

[report_dir_current][stderr]



SMOKE COMMANDS
--------------
(none)


SMOKE OUTPUT
------------
(none)


AUDIT COMMANDS
--------------
(none)


AUDIT OUTPUT
------------
(none)


CLEANUP COMMANDS
----------------
(none)


CLEANUP OUTPUT
--------------
(none)


ARCHIVE COMMANDS
----------------
(none)


ARCHIVE OUTPUT
--------------
(none)


FAILURE DETAILS
---------------
Category : target_project_failure
Message  : Command 'report_dir_current' failed during validation with exit code 2.

SUMMARY
-------
ExitCode : 2
Result   : FAIL